allow multiple cidrs

--- a/inventory/home.yaml
+++ b/inventory/home.yaml
@@ -4,11 +4,13 @@ home:
       ansible_host: 192.168.0.164
       tags:
         wireguard_ip: 192.168.8.1
+        wireguard_add_remote_cidrs: true
         k3s-role: agent
     raspi:
       ansible_host: 192.168.0.45
       tags:
         wireguard_ip: 192.168.8.2
+        wireguard_add_remote_cidrs: true
         k3s-role: agent
   children:
     _coredns:
