--- a/inventory/work.yaml
+++ b/inventory/work.yaml
@@ -1,11 +1,11 @@
 work:
   hosts:
-    surface:
-      ansible_host: localhost
-      ansible_connection: local
-      tags:
-        wireguard_ip: 192.168.9.4
-        wireguard_add_remote_cidrs: true
+    # surface:
+    #   ansible_host: localhost
+    #   ansible_connection: local
+    #   tags:
+    #     wireguard_ip: 192.168.9.4
+    #     wireguard_add_remote_cidrs: true
   children:
     _running:
       hosts:
