--- a/playbooks/devops.yml
+++ b/playbooks/devops.yml
@@ -7,3 +7,7 @@
     tags: [ prometheus ]
   - role: grafana
     tags: [ grafana ]
+  - role: loki
+    tags: [ loki ]
+  - role: drone
+    tags: [ drone ]
