--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -77,6 +77,7 @@
       Address = {{ hostvars[inventory_hostname].tags.wireguard_ip }}
       PrivateKey = {{ wireguard_server_privatekey['content'] | b64decode | trim }}
       ListenPort = 51820
+      MTU = 1400
       {% if (group_names | select('search','k3s') | list | count <= 0) %}
       PostUp = ufw route allow in on wg0 out on {{ ansible_default_ipv4.interface }}
       {% endif %}
