--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -162,6 +162,7 @@
 - name: allow ipv4 forward
   become: yes
   ansible.posix.sysctl:
+    sysctl_file: /etc/sysctl.d/99-sysctl.conf
     name: net.ipv4.ip_forward
     value: '1'
     sysctl_set: yes
@@ -171,6 +172,7 @@
 - name: allow ipv6 forward
   become: yes
   ansible.posix.sysctl:
+    sysctl_file: /etc/sysctl.d/99-sysctl.conf
     name: net.ipv6.conf.all.forwarding
     value: '1'
     sysctl_set: yes
