--- a/roles/wireguard/vars/main.yml
+++ b/roles/wireguard/vars/main.yml
@@ -8,6 +8,7 @@ remote_vnet_cidr:
 # TODO: Make as list
 wireguard_mobile:
   internal_ip: "192.168.8.254"
-  external_ip: "192.168.8.253"
   internal_endpoint: "192.168.0.199"
-  publickey: "{{ lookup('bitwarden', 'wireguard', field='mobile1_publickey', custom_field=true) }}"
+  internal_publickey: "{{ lookup('bitwarden', 'wireguard', field='mobile1_local_publickey', custom_field=true) }}"
+  external_ip: "192.168.8.253"
+  external_publickey: "{{ lookup('bitwarden', 'wireguard', field='mobile1_www_publickey', custom_field=true) }}"
