--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 roles_path = roles:~/.ansible/roles
 inventory = inventory
+host_key_checking = False
 
 [ssh_connection]
 pipelining = True
