--- a/playbooks/vm-update.yml
+++ b/playbooks/vm-update.yml
@@ -3,6 +3,7 @@
   tasks:
   - name: pacman -Syu
     when: ansible_facts['os_family'] == "Archlinux"
+    become: yes
     community.general.pacman:
       update_cache: yes
       upgrade: yes
@@ -10,5 +11,6 @@
   - name: Update aur packages
     when: ansible_facts['os_family'] == "Archlinux"
     command: yay -Syu --aur --noconfirm
+    become: yes
     args:
       warn: no
